<resources>
    <string name="app_name">AdrienAndroidERestaurant</string>
    <string name="Welcome">Welcome to Ewoke</string>

    <!-- Strings used for fragments for navigation -->
    <string name="Entrées">Entrées</string>
    <string name="Plats">Plats</string>
    <string name="Desserts">Desserts</string>

    <!-- List of dishes -->
    <string name="category" />


    <!-- Affichage item !-->
    <string name="Intro">Nom:</string>
    <string name="Prix">Prices:</string>
    <string name="Ingredients">Ingredients</string>

    <string name="Ajout">Quantité</string>
    <string name="Nb_Item">Nombre d unites</string>

    <string name="Add_basket">Ajouter au panier</string>

    <string name="ble_scan_play">Lancer le scan bluetooth</string>
    <string name="ble_scan_pause">Scan bluetooth en cours</string>
    <string name="ble_scan_device_error">Le bluetooth n est pas disponible</string>
    <string name="ble_device_disconnected">Statut : deconnecté</string>
    <string name="ble_device_connected">device connected</string>
    <string name="lecture">Lecture</string>
    <string name="ecriture">Ecrire</string>
    <string name="votre_panier">Votre panier</string>
    <string name="passer_commande">Passer commande</string>
    <string name="totalPrice">Price</string>
    <string name="total">Total</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="PrixPlat">Prix</string>
    <string name="askUser">Ajouter au panier ?</string>
    <string name="ajout">Ajouter</string>
    <string name="refus">Refuser</string>
    <string name="merci">Merci d\'avoir commandé chez nous ! Nous n\'avons pas encore de système de CB, c\'est gratuit !</string>
    <string name="info">info</string>
    <string name="ble_unknown">appareil inconnu</string>
    <string name="ble_disconnected">Deconnecté</string>
    <string name="ble_connected">Connecté</string>
    <string name="ble_connecting">Connection en cours</string>
    <string name="valeur">Rentrer la valeur</string>
    <string name="valider">Valider</string>
    <string name="refuser">Refuser</string>

</resources>