<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15sp"
    android:orientation="vertical"
    tools:context=".CustomAdapter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:orientation="horizontal"
        android:paddingTop="8sp">

        <TextView
            android:id="@+id/detailIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/Ingredients"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailSlider" />

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/Plats"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/detailIngredient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailSlider"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/detailSlider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Quantité"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Ajout"
            android:textAlignment="center"

            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView

            android:id="@+id/Moins"
            android:layout_width="38dp"
            android:layout_height="26dp"

            android:layout_marginStart="112dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/layout_bg"
            android:text="@string/Minus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Quantité" />

        <TextView
            android:id="@+id/Plus"
            android:layout_width="39dp"
            android:layout_height="28dp"

            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/layout_bg"
            android:text="@string/Plus"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/total_price"
            app:layout_constraintTop_toBottomOf="@+id/Quantité" />

        <TextView
            android:id="@+id/nb_item"
            android:layout_width="52dp"
            android:layout_height="39dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Nb_Item"
            android:textAlignment="center"

            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/Moins"
            app:layout_constraintTop_toBottomOf="@+id/Moins" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="59dp"
            android:layout_height="23dp"

            android:layout_marginTop="8dp"

            android:text="@string/PrixPlat"

            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/nb_item"
            app:layout_constraintTop_toBottomOf="@+id/Plus" />

        <TextView
            android:id="@+id/AjoutPanier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/layout_bg"
            android:text="@string/Add_basket"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nb_item" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="186dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailIngredient" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>