<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/logoEwoke"
        android:layout_width="124dp"
        android:layout_height="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/logo_awoke" />


    <TextView
        android:id="@+id/entrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/Entrées"
        android:textAllCaps="false"
        android:textColor="#50121f"
        android:textColorHighlight="#853A3A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barre1" />

    <ImageView
        android:id="@+id/Barre2"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrees"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/barre3"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plats"
        app:srcCompat="@drawable/line" />

    <TextView
        android:id="@+id/plats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="@string/Plats"
        android:textColor="#50121f"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Barre2" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/Welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#C61313"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoEwoke" />

    <TextView
        android:id="@+id/desserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/Desserts"
        android:textColor="#50121f"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barre3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/barre1"
        android:layout_width="109dp"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        app:srcCompat="@drawable/line" />

    <Button
        android:id="@+id/buttonBLE"
        android:layout_width="97dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="Setup BLE"
        app:layout_constraintEnd_toStartOf="@+id/logoEwoke"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/basket"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/Welcome"
        app:layout_constraintStart_toEndOf="@+id/logoEwoke"
        app:srcCompat="@drawable/basket" />

</androidx.constraintlayout.widget.ConstraintLayout>